PCHR-2450: Reduce contacts to display on admin calendar

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
@@ -88,6 +88,7 @@
       <div ng-if="calendar.injectMonths">
         <leave-calendar-month ng-repeat="month in calendar.months track by $index"
           contacts="calendar.contacts"
+          contact-ids-to-reduce-to="calendar.contactIdsToReduceTo"
           month="month"
           period="calendar.selectedPeriod"
           show-contact-name="calendar.showContactName"
