PCHR-2509: Responsive Manager Calendar

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
@@ -1,8 +1,8 @@
 <section>
   <crm-loading show="!calendar.loading.page">
     <div class="panel panel-default">
-      <div ng-if="calendar.showFilters" class="panel-heading chr_manager_calendar__header">
-        <div>
+      <div ng-if="calendar.showFilters" class="panel-heading chr_manager_calendar__header row">
+        <div class="col-md-4 col-lg-2">
           <ui-select ng-change="calendar.refresh('contacts')" ng-model="calendar.filters.userSettings.contact">
             <ui-select-match placeholder="Staff Member" allow-clear>
               <span ng-bind="$select.selected.display_name"></span>
@@ -12,65 +12,74 @@
             </ui-select-choices>
           </ui-select>
         </div>
-        <div class="crm_custom-select">
-          <select
-            class="no-select2"
-            ng-options="region.label for region in calendar.filters.optionValues.regions track by region.id"
-            ng-model="calendar.filters.userSettings.region"
-            ng-change="calendar.refresh('contacts')">
-            <option value="">Region</option>
-          </select>
-          <span class="crm_custom-select__arrow"></span>
+        <div class="col-md-4 col-lg-2">
+          <div class="crm_custom-select crm_custom-select--full">
+            <select
+              class="no-select2"
+              ng-options="region.label for region in calendar.filters.optionValues.regions track by region.id"
+              ng-model="calendar.filters.userSettings.region"
+              ng-change="calendar.refresh('contacts')">
+              <option value="">Region</option>
+            </select>
+            <span class="crm_custom-select__arrow"></span>
+          </div>
         </div>
-        <div class="crm_custom-select">
-          <select
-            class="no-select2"
-            ng-options="department.label for department in calendar.filters.optionValues.departments track by department.id"
-            ng-model="calendar.filters.userSettings.department"
-            ng-change="calendar.refresh('contacts')">
-            <option value="">Department</option>
-          </select>
-          <span class="crm_custom-select__arrow"></span>
+        <div class="col-md-4 col-lg-2">
+          <div class="crm_custom-select crm_custom-select--full">
+            <select
+              class="no-select2"
+              ng-options="department.label for department in calendar.filters.optionValues.departments track by department.id"
+              ng-model="calendar.filters.userSettings.department"
+              ng-change="calendar.refresh('contacts')">
+              <option value="">Department</option>
+            </select>
+            <span class="crm_custom-select__arrow"></span>
+          </div>
         </div>
-        <div class="crm_custom-select">
-          <select
-            class="no-select2"
-            ng-options="levelType.value for levelType in calendar.filters.optionValues.levelTypes track by levelType.id"
-            ng-model="calendar.filters.userSettings.level_type"
-            ng-change="calendar.refresh('contacts')">
-            <option value="">Level Type</option>
-          </select>
-          <span class="crm_custom-select__arrow"></span>
+        <div class="col-md-4 col-lg-2">
+          <div class="crm_custom-select crm_custom-select--full">
+            <select
+              class="no-select2"
+              ng-options="levelType.value for levelType in calendar.filters.optionValues.levelTypes track by levelType.id"
+              ng-model="calendar.filters.userSettings.level_type"
+              ng-change="calendar.refresh('contacts')">
+              <option value="">Level Type</option>
+            </select>
+            <span class="crm_custom-select__arrow"></span>
+          </div>
         </div>
-        <div class="crm_custom-select">
-          <select
-            class="no-select2"
-            ng-options="location.label for location in calendar.filters.optionValues.locations track by location.id"
-            ng-model="calendar.filters.userSettings.location"
-            ng-change="calendar.refresh('contacts')">
-            <option value="">Locations</option>
-          </select>
-          <span class="crm_custom-select__arrow"></span>
+        <div class="col-md-4 col-lg-2">
+          <div class="crm_custom-select crm_custom-select--full">
+            <select
+              class="no-select2"
+              ng-options="location.label for location in calendar.filters.optionValues.locations track by location.id"
+              ng-model="calendar.filters.userSettings.location"
+              ng-change="calendar.refresh('contacts')">
+              <option value="">Locations</option>
+            </select>
+            <span class="crm_custom-select__arrow"></span>
+          </div>
         </div>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" ng-model="calendar.filters.userSettings.contacts_with_leaves"> Show only those who are taking leave
-          </label>
+        <div class="col-md-4 col-lg-2">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" ng-model="calendar.filters.userSettings.contacts_with_leaves"> Show only those who are taking leave
+            </label>
+          </div>
         </div>
       </div>
-      <div ng-class="{ 'panel-heading': !calendar.showFilters, 'panel-subheading': calendar.showFilters }">
-        <div class="row">
-          <div class="col-sm-8">
-            <ui-select multiple ng-model="calendar.selectedMonths">
-              <ui-select-match placeholder="Select Months">
-                <span>{{$item.name}}</span>
-              </ui-select-match>
-              <ui-select-choices repeat="month.index as month in (calendar.months | filter: $select.search)">
-                <span>{{month.name}}</span>
-              </ui-select-choices>
-            </ui-select>
-          </div>
-          <div class="col-sm-offset-1 col-sm-3">
+      <div class="panel-heading chr_manager_calendar__sub-header row" ng-class="{ 'panel-heading': !calendar.showFilters, 'panel-subheading': calendar.showFilters }">
+        <div class="col-md-12 col-lg-8">
+          <ui-select multiple ng-model="calendar.selectedMonths">
+            <ui-select-match placeholder="Select Months">
+              <span>{{$item.name}}</span>
+            </ui-select-match>
+            <ui-select-choices repeat="month.index as month in (calendar.months | filter: $select.search)">
+              <span>{{month.name}}</span>
+            </ui-select-choices>
+          </ui-select>
+        </div>
+        <div class="col-md-12 col-lg-offset-1 col-lg-3">
             <div class="crm_custom-select crm_custom-select--full">
               <select
                 class="no-select2"
@@ -81,7 +90,6 @@
               <span class="crm_custom-select__arrow"></span>
             </div>
           </div>
-        </div>
       </div>
     </div>
     <crm-loading show="!calendar.loading.calendar">
