--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
@@ -2,8 +2,8 @@
   <div class="panel panel-default">
     <crm-loading show="!vm.loading.page">
       <div class="panel-heading row chr_manage_leave_requests__header">
-        <span class="col-md-5 panel-title" ng-if="!vm.isAdmin">Manager Absence Approval</span>
-        <span class="col-md-3 chr_manage_leave_requests__leave_type_filter">
+        <div class="col-md-5 panel-title" ng-if="!vm.isAdmin">Manager Absence Approval</div>
+        <div class="col-md-3 chr_manage_leave_requests__leave_type_filter">
           <div class="crm_custom-select crm_custom-select--full">
             <select
               ng-options="types.title for types in vm.absenceTypes track by types.id"
@@ -13,19 +13,31 @@
             </select>
             <span class="crm_custom-select__arrow"></span>
           </div>
-        </span>
-        <span class="col-md-4 col-md-offset-1 chr_manage_leave_requests__assignee_filter text-center" ng-if="vm.isAdmin">
+        </div>
+        <div class="visible-md visible-lg col-md-4 col-md-offset-1 chr_manage_leave_requests__assignee_filter text-center" ng-if="vm.isAdmin">
           <div class="btn-group">
             <button
               ng-repeat="filter in vm.filtersByAssignee"
               type="button"
               ng-click="vm.refreshWithFilterByAssignee(filter.type)"
-              ng-class="{'active': vm.filters.leaveRequest.assignedTo === filter.type}"
+              ng-class="{'active': vm.filters.leaveRequest.assignedTo.type === filter.type}"
               class="btn btn-secondary-outline btn-sm">{{filter.label}}
             </button>
           </div>
-        </span>
-        <span class="col-md-4 row">
+        </div>
+        <div class="hidden-md hidden-lg col-md-4 col-md-offset-1 chr_manage_leave_requests__assignee_filter text-center" ng-if="vm.isAdmin">
+          <div class="crm_custom-select crm_custom-select--full">
+            <select
+              ng-options="filter as filter.label for filter in vm.filtersByAssignee"
+              ng-model="vm.filters.leaveRequest.assignedTo"
+              ng-change="vm.refresh()">
+              <option value="">Set Assigned to</option>
+            </select>
+            <span class="crm_custom-select__arrow"></span>
+          </div>
+        </div>
+
+        <div class="col-md-4 row">
           <div
             ng-class="{ 'col-lg-8 col-lg-offset-2' : vm.isAdmin }"
             class="col-md-10 chr_manage_leave_requests__period_and_all_filters">
@@ -42,7 +54,7 @@
           <i class="fa" aria-hidden="true" ng-class="{ 'fa-chevron-right': !vm.isFilterExpanded, ' fa-chevron-down': vm.isFilterExpanded }"></i>
           Filter
         </div>
-        </span>
+        </div>
       </div>
       <div class="panel-subheading row chr_manage_leave_requests__sub-header"
         ng-show="vm.isFilterExpanded">
@@ -110,7 +122,7 @@
       <crm-loading show="!vm.loading.content">
         <div ng-hide="!vm.loading.table && !vm.leaveRequests.table.list.length"
            class="panel-body row chr_manage_leave_requests__panel_body">
-          <ul class="hidden-xs hidden-sm col-md-3 nav nav-pills nav-stacked chr_vertical_tabs">
+          <ul class="visible-md visible-lg col-md-3 nav nav-pills nav-stacked chr_vertical_tabs">
             <li ng-repeat="status in vm.leaveRequestStatuses track by status.value"
               ng-hide="vm.filterLeaveRequestByStatus(status) === 0"
               ng-click="vm.refreshWithFilter(status)"
@@ -124,15 +136,17 @@
             </li>
           </ul>
 
-          <div class="visible-xs visible-sm panel-heading chr_manage_leave_requests__status_container">
-            <div class="crm_custom-select crm_custom-select--full">
-              <select
-                ng-options="status.label for status in vm.leaveRequestStatuses | filter: vm.filterLeaveRequestByStatus"
-                ng-model="vm.filters.leaveRequest.leaveStatus"
-                ng-change="vm.refresh(1, false, 'table')">
-                <option value="">Leave Status</option>
-              </select>
-              <span class="crm_custom-select__arrow"></span>
+          <div class="hidden-md hidden-lg panel-heading chr_manage_leave_requests__status_container">
+            <div>
+              <div class="crm_custom-select crm_custom-select--full">
+                <select
+                  ng-options="status.label for status in vm.leaveRequestStatuses | filter: vm.filterLeaveRequestByStatus"
+                  ng-model="vm.filters.leaveRequest.leaveStatus"
+                  ng-change="vm.refresh(1, false, 'table')">
+                  <option value="">Leave Status</option>
+                </select>
+                <span class="crm_custom-select__arrow"></span>
+              </div>
             </div>
           </div>
 
