PCHR-2509: Freeze 1st column of calendar

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manager_calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manager_calendar.scss
@@ -28,6 +28,11 @@
       > div {
         width: calc( 100% - 30px );
       }
+
+      .ui-select-search {
+        display: inline;
+        width: 130px !important;
+      }
     }
   }
 }
