--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/leaveandabsence.scss
@@ -9,6 +9,9 @@
   @import "pages/*";
 }
 
+// This element is outside #bootstrap-theme:
+@import "overrides/civicrm/access-keys-footer";
+
 // The bootstrap dropdown is attached to the <body> outside of the #bootstrap-theme
 // namespace. Hence unfortunately the styles for the dropdowns need
 // to be available out of the namespace as well
