--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
@@ -14,7 +14,14 @@
             <table ng-switch-when="true" class="table table-bordered chr_leave-calendar">
               <thead>
               <tr class="chr_leave-calendar__days">
-                <th class="chr_leave-calendar__name" ng-if="month.showContactName">Employee Name</th>
+                <th class="chr_leave-calendar__name" ng-if="month.showContactName">
+                  <span>Employee Name</span>
+                  <div class="chr_leave-calendar__pagination" ng-if="month.contactsList().length > month.pageSize">
+                    <button class="btn-link" ng-disabled="month.currentPage == 0" ng-click="month.currentPage = (month.currentPage - 1)">
+                      <i class="fa fa-lg fa-chevron-up"></i>
+                    </button>
+                  </div>
+                </th>
               </tr>
               </thead>
               <tbody>
@@ -52,15 +59,19 @@
             </table>
           </div>
         </div>
-
-        <div class="chr_leave-calendar__pagination text-center" ng-if="month.contactsList().length > month.pageSize">
-          <button class="btn-link" ng-disabled="month.currentPage == 0" ng-click="month.currentPage = (month.currentPage - 1)">
-            <i class="fa fa-lg fa-arrow-left"></i>
-          </button>
-          <button class="btn-link" ng-disabled="month.currentPage >= month.contactsList().length / month.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
-            <i class="fa fa-lg fa-arrow-right"></i>
-          </button>
-        </div>
+        <table class="table table-bordered chr_leave-calendar__pagination-next" ng-if="month.contactsList().length > month.pageSize">
+          <thead>
+          <tr>
+            <th>
+              <div class="chr_leave-calendar__pagination">
+                <button class="btn-link" ng-disabled="month.currentPage >= month.contactsList().length / month.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
+                  <i class="fa fa-lg fa-chevron-down"></i>
+                </button>
+              </div>
+            </th>
+          </tr>
+          </thead>
+        </table>
       </div>
     </div>
   </crm-loading>
