PCHR-2510: Fix my leave calendar

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -17,6 +17,7 @@ $chr-leave-calendar-legend-size:                  20px;
 
 .chr_leave-calendar__names-container {
   .chr_leave-calendar {
+    margin-bottom: 0;
     table-layout: fixed;
   }
 }
