PCHR-2529: Fix Backstop and add scenarios

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar.html
@@ -63,7 +63,10 @@
         <div class="col-md-4 col-lg-2">
           <div class="checkbox">
             <label>
-              <input type="checkbox" ng-model="calendar.filters.userSettings.contacts_with_leaves"> Show only those who are taking leave
+              <input
+                class="chr_leave-calendar__toggle-contacts-with-leaves"
+                type="checkbox" ng-model="calendar.filters.userSettings.contacts_with_leaves">
+                Show only those who are taking leave
             </label>
           </div>
         </div>
