--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/details-tab/sickness.html
@@ -2,8 +2,8 @@
   <div class="col-xs-12 form-horizontal">
   <hr>
     <div class="form-group">
-      <label class="col-xs-4 control-label required-mark">Reason</label>
-      <div class="col-xs-8">
+      <label class="col-sm-4 control-label required-mark">Reason</label>
+      <div class="col-sm-8">
         <div class="crm_custom-select crm_custom-select--full">
           <select
             name="reason"
