--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-comments-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-comments-tab.html
@@ -7,7 +7,8 @@
       ng-repeat="comment in commentsCtrl.getActiveComments() | orderBy: commentsCtrl.id : true">
       <div class="chr_leave-request-comment__meta">
         <span class="chr_leave-request-comment__author">{{commentsCtrl.getCommentorName(comment.contact_id)}}</span>
-        <span>-</span>
+        <span class="visible-sm-inline visible-md-inline visible-lg-inline">-</span>
+        <br class="hidden-sm hidden-md hidden-lg"/>
         <span class="chr_leave-request-comment__date">{{comment.comment_id ? commentsCtrl.formatDateTime(comment.created_at) : "Just now"}}</span>
         <button
           class="btn btn-link"
