--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-details-tab.html
@@ -14,8 +14,8 @@
           || detailsTab.isLeaveStatus(detailsTab.statusNames.awaitingApproval)
           || detailsTab.isLeaveStatus(detailsTab.statusNames.moreInformationRequired)
           || !detailsTab.request.status_id">
-        <div class="col-xs-4">Opening Balance</div>
-        <div class="col-xs-8">{{detailsTab.balance.opening}}</div>
+        <div class="col-xs-6 col-sm-4">Opening Balance</div>
+        <div class="col-xs-6 col-sm-8">{{detailsTab.balance.opening}}</div>
       </div>
       <div
         ng-show="detailsTab.isLeaveType('toil')"
@@ -29,47 +29,49 @@
         <div
           class="row chr_leave-request-modal__form-group text-primary pointer"
           ng-click="detailsTab.uiOptions.isChangeExpanded = !detailsTab.uiOptions.isChangeExpanded">
-          <div class="col-xs-4">
+          <div class="col-xs-6 col-sm-4">
             <i
               class="fa chr_leave-request-modal__chevron"
               aria-hidden="true"
               ng-class="{ 'fa-chevron-right': !detailsTab.uiOptions.isChangeExpanded, ' fa-chevron-down': detailsTab.uiOptions.isChangeExpanded }"></i>
             Change
           </div>
-          <div class="col-xs-8">{{detailsTab.balance.change.amount}}</div>
+          <div class="col-xs-6 col-sm-8">{{detailsTab.balance.change.amount}}</div>
         </div>
-        <table
-          class="table chr_leave-request-modal__table"
-          ng-show="detailsTab.uiOptions.isChangeExpanded">
-          <thead>
-          <tr>
-            <th>Date</th>
-            <th>Selection</th>
-            <th>Amount</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr ng-repeat="breakdown in detailsTab.pagination.filteredbreakdown">
-            <td>{{breakdown.date | date:'EEE '+ detailsTab.uiOptions.userDateFormat}}</td>
-            <td>{{breakdown.type.label}}</td>
-            <td>{{breakdown.amount}}</td>
-          </tr>
-          </tbody>
-          <tfoot>
-          <tr>
-            <td colspan="3" class="text-center">
-              <uib-pagination
-                ng-if="detailsTab.pagination.totalItems"
-                total-items="detailsTab.pagination.totalItems"
-                ng-model="detailsTab.pagination.currentPage"
-                class="pagination"
-                ng-change="detailsTab.pagination.pageChanged()"
-                direction-links="false"
-                items-per-page="detailsTab.pagination.numPerPage"></uib-pagination>
-            </td>
-          </tr>
-          </tfoot>
-        </table>
+        <div class="table-responsive">
+          <table
+            class="table chr_leave-request-modal__table"
+            ng-show="detailsTab.uiOptions.isChangeExpanded">
+            <thead>
+            <tr>
+              <th>Date</th>
+              <th>Selection</th>
+              <th>Amount</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="breakdown in detailsTab.pagination.filteredbreakdown">
+              <td>{{breakdown.date | date:'EEE '+ detailsTab.uiOptions.userDateFormat}}</td>
+              <td>{{breakdown.type.label}}</td>
+              <td>{{breakdown.amount}}</td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+              <td colspan="3" class="text-center">
+                <uib-pagination
+                  ng-if="detailsTab.pagination.totalItems"
+                  total-items="detailsTab.pagination.totalItems"
+                  ng-model="detailsTab.pagination.currentPage"
+                  class="pagination"
+                  ng-change="detailsTab.pagination.pageChanged()"
+                  direction-links="false"
+                  items-per-page="detailsTab.pagination.numPerPage"></uib-pagination>
+              </td>
+            </tr>
+            </tfoot>
+          </table>
+        </div>
       </div>
       <div
         class="row"
@@ -78,8 +80,8 @@
                         || detailsTab.isLeaveStatus(detailsTab.statusNames.awaitingApproval)
                         || detailsTab.isLeaveStatus(detailsTab.statusNames.moreInformationRequired)
                         || !detailsTab.request.status_id">
-        <div class="col-xs-4">Closing Balance</div>
-        <div class="col-xs-8">{{detailsTab.balance.closing}}</div>
+        <div class="col-xs-6 col-sm-4">Closing Balance</div>
+        <div class="col-xs-6 col-sm-8">{{detailsTab.balance.closing}}</div>
       </div>
     </div>
   </crm-loading>
@@ -89,8 +91,8 @@
     <div class="col-xs-12 form-horizontal">
       <hr>
       <div class="form-group">
-        <label class="col-xs-4 control-label">Expiry Date</label>
-        <div class="col-xs-5">
+        <label class="col-sm-4 control-label">Expiry Date</label>
+        <div class="col-sm-5">
           <span
             class="chr_leave-request-modal__span-expiry"
             ng-if="!detailsTab.canManage || detailsTab.isSelfRecord">
