--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -188,7 +188,6 @@ th.chr_leave-calendar__name {
   padding: 0 20px !important;
   text-align: left;
   text-overflow: ellipsis;
-  vertical-align: middle !important;
   width: 100%;
 }
 
@@ -196,16 +195,22 @@ th.chr_leave-calendar__name, th.chr_leave-calendar__day {
   height: 49px;
 }
 
+th.chr_leave-calendar__name {
+  padding-bottom: 10px !important;
+}
+
+td.chr_leave-calendar__name {
+  vertical-align: middle !important;
+}
+
 .chr_leave-calendar__pagination {
-  display: inline;
-  font-size: $font-size-small;
+  font-size: $chr-leave-calendar-cell-font-size;
+  text-align: center;
 
   [class*="btn"] {
     outline: none;
     padding: 0;
-    display: block;
-    line-height: 10px;
-    margin-left: 33px;
+    line-height: 1em;
 
     .fa {
       color: $gray;
@@ -232,8 +237,11 @@ th.chr_leave-calendar__name, th.chr_leave-calendar__day {
 
   th {
     height: 24px;
-    padding-top: 4px !important;
-    padding-bottom: 6px !important;
+    padding: 4px 0 6px !important;
+  }
+
+  .chr_leave-calendar__pagination {
+    padding-right: 3px !important;
   }
 }
 
