--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-body.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-body.html
@@ -27,6 +27,7 @@
       <div class="col-xs-12">
         <div class="crm_custom-select crm_custom-select--full">
           <select
+            class="no-select2"
             ng-hide="$ctrl.absenceTypes.length === 0"
             ng-disabled="!$ctrl.isRole('admin') && ($ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isMode('create')))"
             name="absenceTypeSelect"
@@ -34,6 +35,7 @@
             ng-model="$ctrl.request.type_id"
             ng-change="$ctrl.updateBalance()"></select>
           <select
+            class="no-select2"
             ng-show="$ctrl.absenceTypes.length === 0"
             disabled="disabled">
             <option>You don't have any leave entitlement</option>
@@ -77,6 +79,7 @@
           <div class="col-sm-8">
             <div class="crm_custom-select crm_custom-select--full">
               <select
+                class="no-select2"
                 name="statusSelect"
                 ng-options="status.value as status.label for status in $ctrl.getStatuses()"
                 ng-model="$ctrl.newStatusOnSave">
