--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
@@ -1,5 +1,15 @@
 <div class="my-leave-page">
   <div class="button-container">
+    <div class="hidden-sm hidden-md hidden-lg chr_leave__page-selector-dropdown crm_custom-select">
+      <select
+        class="no-select2"
+        ng-model="myleave.tabName"
+        ng-change="myleave.changeTab()">
+        <option value="my-leave.report">Report</option>
+        <option value="my-leave.calendar">Calendar</option>
+      </select>
+      <span class="crm_custom-select__arrow"></span>
+    </div>
     <leave-request-record-actions
       btn-class="btn-primary"
       contact-id="myleave.contactId"
@@ -9,7 +19,7 @@
   </div>
   <div class="tabs-container">
     <div class="container">
-      <ul class="nav nav-tabs nav-justified nav-tabs-header">
+      <ul class="visible-sm visible-md visible-lg nav nav-tabs nav-justified nav-tabs-header">
         <li ui-sref-active="active">
           <a ui-sref="my-leave.report">Report</a>
         </li>
