PCHR-2508: Add padding for manager title

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_manage-leave-requests.scss
@@ -10,7 +10,8 @@
     }
 
     @media screen and (max-width: $screen-md-min) {
-      > div:not(:last-child) {
+      > div:not(:last-child),
+      .panel-title {
         padding-bottom: 20px;
       }
     }
