PCHR-2547: Migrate entitlements screen to bootstrap

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-entitlement-calculation-page.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/pages/_admin-entitlement-calculation-page.scss
@@ -1,4 +1,6 @@
 #calculation-details {
+  background: $crm-white;
+
   .base-contractual-entitlement { color: $brand-primary; }
   .working-days-to-work { color: $brand-success; }
   .working-days-in-period { color: $brand-warning; }
